--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik+Wet+Paint&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -18,7 +20,6 @@ body {
   min-height: 100%;
   width: 100%;
 }
-
 
 /* nav */
 nav {
@@ -89,4 +90,147 @@ nav {
 .nav-right svg:hover {
   color: #674575;
   cursor: pointer;
+}
+
+/* hero-sec */
+
+.hero-sec {
+  min-height: 100vh;
+  width: 100%;
+  margin: 0 auto;
+  padding: 3rem;
+  background-color: #8c5b97;
+}
+
+.hero-info {
+  position: relative;
+  width: 100%;
+  max-width: 90%;
+  margin: 0 auto;
+  display: flex;
+}
+
+.hero-desc {
+  width: 55%;
+  color: #fff;
+}
+
+.hero-desc h1 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  letter-spacing: 2px;
+  margin-bottom: 2.5%;
+}
+
+.hero-desc p {
+  font-size: 1.2rem;
+  line-height: 2rem;
+}
+
+.hero-woman-main {
+  position: absolute;
+  height: 450px;
+  right: 1%;
+  width: 30%;
+  border-radius: 0.3rem;
+}
+
+.hero-wom-first {
+  position: absolute;
+  top: 20%;
+  right: 24%;
+  width: 170px;
+  height: 136px;
+  border-radius: 0.3rem;
+}
+
+.hero-heart {
+  position: absolute;
+  right: 22%;
+  top: 27%;
+}
+
+.hero-woman-second {
+  position: absolute;
+  height: 200px;
+  width: 170px;
+  top: 45%;
+  right: -8%;
+  border-radius: 0.3rem;
+}
+
+.hero-star {
+  position: absolute;
+  top: 18rem;
+  right: -6%;
+}
+
+.hero-arrow {
+  position: absolute;
+  top: 14rem;
+  right: 23%;
+}
+
+.hero-name {
+  position: absolute;
+  top: 18.5rem;
+  right: 23%;
+  color: #fff;
+  font-size: 1.3rem;
+  letter-spacing: 1px;
+  font-weight: 500;
+  transform: rotate(10deg);
+  font-family: "Rubik Wet Paint", system-ui;
+}
+
+/* hero-contact */
+.hero-contact {
+  max-width: 95%;
+  height: 30%;
+  margin: 0 auto;
+  margin-top: 5rem;
+  border: 2px solid #674575;
+  padding: 2%;
+  border-radius: 0.9rem;
+}
+
+.hero-contact-marketing {
+  display: block;
+  margin-bottom: 2%;
+}
+
+.hero-contact input {
+  border-color: #e3e3e3;
+  border-radius: 4px;
+  color: #000;
+  font-weight: 400;
+  outline: none;
+  background: #ffffff;
+  font-size: 15px;
+  padding: 12px;
+  border: 1px solid #e3e3e3;
+  margin-right: 2%;
+}
+
+.hero-contact button {
+  padding: 12px 24px;
+  background-color: none;
+  border: none;
+  outline: none;
+  background-color: #60b0ba;
+  border-radius: 4px;
+  color: #fff;
+  font-weight: 700;
+  transition: background-color 0.4s ease;
+}
+
+.hero-contact button:hover {
+  background-color: #529aa3;
+  cursor: pointer;
+}
+
+.hero-contact p {
+  margin-top: 2%;
+  color: #fff;
+  font-size: 1.1rem;
 }
